# silksong-webweaver

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  main.rs
.Jules/: palette.md
.github/workflows/: ci.yml  deploy.yml
src/: crypto.rs  lib.rs  main.rs  parser.rs
src/data/: mod.rs  names.rs
src/lib/: names.rs
wasm-crypto/: Cargo.toml
wasm-crypto/src/: lib.rs
web/: exploration_timeline.html  index.html  map_viewer.html  package-lock.json  package.json  tile_overlay_viewer.html
web/assets/img/fullmap/: tile_coordinates.json
web/assets/img/maps/: map_icons.json
web/pkg/: wasm_crypto.d.ts  wasm_crypto.js  wasm_crypto_bg.wasm  wasm_crypto_bg.wasm.d.ts
web/src/: main.js  styles.css
web/src/data/: index.js  parsers.js  parsers.test.js  silksongdata.js  silksongdata.test.js
