[package]
name = "silksongtool"
version = "0.1.0"
edition = "2021"

[lib]
name = "silksongtool"
path = "src/lib.rs"

[[bin]]
name = "silksongtool"
path = "src/main.rs"

[dependencies]
aes = "0.8"
ecb = "0.1.2"
block-padding = "0.4.2"
base64 = "0.22"
cipher = "0.4"
pkcs7 = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.20"
clap = { version = "4", features = ["derive"] }
thiserror = "1"